src/syn/snapshots/tvm__syn__tests__lone_fn_keyword.snap
---
source: src/syn/tests.rs
expression: "parse!(r#\"\n        fn\n    \"#)"
---
error: expected "identifier"
1 |  fn
  |   ^

